TestE2EMicroServices/K8s/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: nilamazing/commandmicroservice:1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 8081
      targetPort: 8080
