TestE2EMicroServices/K8s/platforms-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformservice-svc
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 8080
      targetPort: 8080
