TestE2EMicroServices/K8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ingress-regex: 'true'
spec:
  rules:
  - host: tutorial.com
    http:
      paths:
      - pathType: Prefix
        path: /api/platforms
        backend:
          service:
            name: platforms-clusterip-svc
            port: 
              number: 80
      - pathType: Prefix
        path: /api/communication
        backend:
          service:
            name: commands-clusterip-svc
            port:
              number: 8081
